Correct h2 alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ img {
   grid-column: 1;
   font-size: 0.9em;
   margin: 5px;
+  text-align: left;
 }
 
 .products--sale {
